--- a/_posts/2016-05-20-test.md
+++ b/_posts/2016-05-20-test.md
@@ -4,263 +4,139 @@ title: "Hank Quinlan, Horrible Cop, Launches Site"
 date: 2014-04-30
 ---
 
-# Algorithmes:
+# Contrôle principal III
 
+## Matrière
 
-## 1 Tri-Bulle
-
-
-[<a href="https://visualgo.net/en/sorting"><img src="00illustrations/triBulle-flag.gif" align="" height="600" float="right"></a>](http://google.com.au/)
-
-#
-
-## Simple
-
-- Tous les parcours commencent à la fin du tableau `n-1`.
- 
-- Lors de chaque parcours, l'élément actuelement pointé par la variable d'itération `j`, si il est plus petit que l'élément à sa gauche `j-1` est échangé avec ce dernier.
-
-
-
-
-[<a href=""><img src="00illustrations/Echanger.png" align="" height="150" float="right"></a>]()
-
-
-```c++
-void echange(int *t, int idx)
-{
-    int temp = t[idx];
-    t[idx]   = t[idx-1];
-    t[idx-1] = temp;
-}
-```
-
-- Si l'élément à sa gauche `j-1` est plus petit, il n'y a pas d'échange.
-
-- L'élément le plus petit se retrouve au début du tableau à la fin du premier parcours.
-
-- Tant que l'élément pointé par la variable d'itération est plus petit que `j-1`, il se déplace vers le début du tableau.
-
-- Au second parcours, le second élément le plus petit se retrouvera trié à droite de l'élément le plus petit et ainsi de suite jusqu'au tri complet du tableau.
-
-[<a href=""><img src="00illustrations/Tri_Bulle.png" align="" height="250" float="right"></a>]()
-
-```c++
-
-
-// tri bulle simple
-
-void triBulle(int *t, int g, int d)
-{
-    for (int i = 1; i <= d-g; i++)
-    {
-        for (int j = d; j >= g+1; j--)
-        {
-            if (t[j] < t[j-1]) { echange(t,j); }
-        }
-    }
-}
-```
-### Complexité 
-La boucle extérieur qui est responsable du nombre
-de parcours du tableau a sa variable d'itération qui est égale au nombre de cases du tableau `-1`.
-
-La boucle intérieur qui est responsable du nombre de comparaisons par parcours a sa variable d'itération
-que est également égale au nombre de cases du tableau `-1`.
-
-(N-1)*(N-1) = (N-1)^2 comparaisons La complexité de cet version de l'algorithme est de: **O(N^2)**
-
-
-
-$$5 + 2$$
-
+### couche 4 (transport)
+- rôles
+- arguments dans le choix de TCP ou UDP
+- notion de protocole sûr et de protocole sûr à fenêtre
+- le cas particulier du transport du DNS (usuellement UDP, parfois besoin de TCP)
+- TCP
+    * champ principaux des entêtes et leur rôle
+    * ouverture et fermeture de la connexion
+    * savoir utiliser le diagramme d'état
+    * rôle des ports
+    * principes de la fenêtre et des confirmations (acquittements)
+    * importance de la minuterie de retransmission
+    * congestion (définition)
+- UDP
+- les sockets
+    * rôle
+    * opérations (appels systèmes) de base et cycle de vie
+- sécurité
+- décodages des couches 4 à 2 (évt. protocole de couche 7 aussi)
+### couche 7
+- principes
+- DNS (fonctionnement général, protocoles couche 4, type d'enregistrements principaux, concept de délégation)
+- E-mail (architecture, protocoles SMTP, POP, IMAP, format d'un e-mail, format MIME, sécurité, SPAM)
 
 #
 
-### Itératif
+### Résumé: rôles de la couche 4
 
-Nous pouvons dire qu'après i parcours du tableau, les i plus petits éléments seront triés. Il n'est donc plus nécéssaire que les parcours itèrent sur ces cases ce qui suggère une première amélioration:
+* assurer le **transport fiable** de bout en bout d'un réseau (TCP)
+* multiplexage (identifiction des **services** couche 7) via le concept de port
+* optimisation de la performance
+    * bonne utilisation du débit disponible
+    * gestion des **congestions**
+* en fonction des besoins de l'application
+    * mode connecté ou non connecté
+    * mode caractère (stream, flux) ou message
+    * tout ou partie des fonctions de la couche
 
+### Transport fiable
+* _protocol sûr_
+    * **détection** d'erreurs et **retransmission**
+    * assurer l'**ordre** de livrison et l'absence de **doublons**
+    * **constrôle de flux** (ne pas surcharger le destinataire)
+* complémentarité avec la couche 2 (portée différente!)
 
-```c++
-// tri Bulle itératif:
+### TCP et UDP
+* aspects communs:
+    * utilisent les services de **IP** (envoi à une machine)
+    * permettent l'adressage de services applicatifs (ports)
+    * transmission duplex (bidirectionnelle) possible
+    * les deux sont _best effort_ (IP sans QoS)
+        * TCP a une phase de connextion
 
-void triBulle(int tab[], int debut, int fin){
-    for (int i = 1; i <= fin; i++){
-        for (int j = fin; j >= debut+i; j--){
-            display(tab, i, j, 8);
-            if (tab[j] < tab[j-1]){
-                swap(tab, j, j-1);
-            }
-        }
-    }
-}
-```
+### Besoin des applications
 
-Plusieurs éléments peuvent remonter lors d'un même parcours. Avant que l'élément le plus petit restant ne remonte jusqu'à sa place définitive, tous les éléments qui ont à leur gauche (j-1) un élément plus petit remontent au moins d'une case.
+> * quel protocole de couche 4 pour la téléphonie sur IP et pourqoi?
+> * quel protocole de couche 4 pour des requêtes SQL sur une base de données et pouqoi
 
-#
+### Les ports
 
-### Flag
+* un numéro de port identifie une application d'une machine
+* l'application appelante doit connaître le numéro de port de l'application appelée: _well known ports:_
 
-Le tableau est donc suceptible d'être trié avant les (N-1) parcours. Il serait donc profitable de cesser les parcours dés que le tableau est trié surtout dans le cas d'un tableau qui est totalement trié dés le début. C'est ce que nous permet la prochaine amélioration qui stop la fonction si un parcours entier a été fait sans aucun échange:
+| port | protocole 
+| :-----------: | :-
+| 7 | Echo
+| 21 | FTP
+| 23 | Telnet
+| 80 | HTTP (www)
+| 161 | SNMP 
+| 9 | Discard
+| 22 | SSH
+| 25 | SMTP
+| 110 | POP3
+| 443 | HTTPS
 
-[<a href=""><img src="00illustrations/triBulle_Flag.png" align="" height="400" float="right"></a>](00illustrations/triBulle_Flag.png)
+* tout échnge UDP ou connextion TCP nécessite deux numéros de port (comme tout datagramme IP a deux adresses IP)
+* le numéro de port de l'appelant est en général choisi dynamiquement dans la plage non privilégiée `1023` (ports fantômes ou dynamiques)
 
+### Identification d'une connexion
 
-```c++
-// triBulle-flag.cpp
+* une machine doit pouvoir identifier ses connexions TCP ou un échange UDP de façon unique: la combinaison suivante est utilisée:
+    * adresse IP locale
+    * numéro de port local
+    * adresse IP distante
+    * noméro de port distant
 
-void triBulle(int *t, int g, int d)
-{
-    int j = 1;
-    bool flag = true;
-    while (flag)
-    {
-        flag = false;
-        for (int i = d; i >= g+j; i--)
-        {
-            if (t[i] < t[i-1])
-            {
-                echange(t,i);
-                flag = true;
-            }
-        }
-        j++;
-    }
-}
-```
+*plusieurs connexions ou échanges d'un client sur la même application d'un même serveur sont différenciès par les numéros de port locaux (côté client)
 
-### Complexité 
+## UDP (User Datagram Protocol)
+* un utilisteur d'UDP doit compter avec les événements suivants:
+    * les données peuvent être perdues
+    * les mêmes données peuvent arriver plusieurs fois
+    * l'ordre des données peut être modifié
+    * le distinataire peut être surchargé par les données de l'émetteur
+    * les données ne peuvent dépasser le MTU
 
-Le nombre maximum d'échanges reste le même (N(N-1))/2
-mais la complexité de l'algorithme a augmenté, ainsi
-que sa durée d'execution.
-Cette version n'est donc interessante que pour des
-tableaux très proche d'un tableau ordonné
-dés le début.
+### format des messages
 
-**O(N^2)**
+![](http://flylib.com/books/3/223/1/html/2/files/11fig02.gif)
 
-#
+* port source et destination: identification des applications émettrices et destinataires
+* message lenght: (longueur en bytes. y.c l'entête)
+* checksum: chiffre de contrôle pour tout le message
 
-### Étude de la stabilité
-Si deux éléments d'indice `i` et `j` avec `i < j`.
-tout élément de clé strictement inférieur se
-placera à leur gauche. Ils se trouveront donc
-dans des cases d'indice `k` et `k+1`. Lors de la
-comparaison des clés des ces deux éléments,
-**ils ne seront donc pas échangés** et donc l'ordre
-de leurs emplacements d'origine est respecté.
-L'élément d'indice `i` se trouvera dans la case
-`k` et celui d'indice `j > i` dans la case d'indice
-`k + 1`.  **La métode est donc stable**.
+### applications typiques
 
+* TFTP (Trivial file transfer protocol)
+    * téléchargement de configuration ou de firmwares en systèmes embarqués
+DNS (Domain name system, aussi en TCP)
+* NFS (Network file system - UNIX)
+* SMNP (Simple networ management protocol)
+*RTP (realtime transport protocol - données multimedia)
 
-Cet algorithme possède une assymétrie particulière:
-Un seul élément de petite clé mal classé du côté
-des éléments de grande clé, d'un tableau presque
-trié prend sa place (début) après un seul parcours du
-tableau. Par contre un élément de grande clé, mal
-classé du coté des petites clés descend (vers la fin)
-à sa place à raison d'une case par parcours.
-Le tableau suivant:
+## TCP (Transmission Control Protocol)
+* TCP est un protocol sûr, qui utilise les principes suivants par défaut:
+    * protocole a fenètre (de type `GO-BACK N`)
+    * implicit retransmission
+* les messages sont appelés _segments_
+* on utilise uniquement des confirmations positives (`ACK`, qui peuvent être groupés) et un timer (minuteir) est calculé pour chaque segment
+* TCP offre un transport sûr (fiable) des données
+    * les données sont transmises exactement une fois (pas de perte, pas de duplication)
+    * pas de modification de l'ordre
+    * constrôle de flux
 
-```c++
- [12] [18] [42] [44] [55] [67] [94] [6]
-Debut                               Fin
-```
+## Scénario typique TCP: HTTP
 
+<object type="text/html" data="https://ssl.horus.ch/~schaefer/pub/HEArc/ReseauxINF1/protocole-fenetre.html" height="300" width="850">
+</object>
 
-...est trié en deux parcours en utilisant la fonction
-triBulle itératif + flag. Un parcours pour faire
-monter (vers le début) le clé 6 dans sa case
-définitive et un autre parcours pour constater que
-le tableau est trié.
-Le tableau suivant quant à lui...
-
-```c++
- [94] [6] [12] [18] [42] [44] [55] [67]
-Debut                              Fin
-```
-
-... nécessite sept parcours pour obtenir un tri
-complet: Les sept valeurs de clé plus petites
-montent à leur place à raison d'une case par
-parcours.
-
-Cette asymétrie suggère une troisième
-amélioration de l'algorithme. Pour compenser
-l'asymétrie décrite, le sens de deux parcours
-consécutifs du tableau est alterné.
-
-#
-
-
-## 2 Tri-Shaker
-
-Pour compenser
-l'asymétrie décrite, le sens de deux parcours
-consécutifs du tableau est alterné.
-
-[<a href=""><img src="00illustrations/triShaker.png" align="" height="600" float="right"></a>]()
-
-
-
-```c++
-
-// triShaker.cpp
-
-void swap(int tab[], int a, int b){
-    int temp = tab[a];
-    tab[a]   = tab[b];
-    tab[b]   = temp;
-}
-
-void triShaker(int tab[], int g, int d){
-    int ptrG = g+1;
-    int ptrD   = d;
-    int derEch   = d;
-
-    cout << "derEch start: " << derEch << endl;
-
-    while (ptrG <= ptrD){
-
-        cout << "ptrG: " << ptrG
-             << "\tptrD: " << ptrD
-             << "\tderEch: " << derEch
-             << endl;
-
-        for (int i = ptrD; i >= ptrG; i--){
-            if (tab[i] < tab[i-1]){
-                swap(tab, i, i-1);
-                derEch = i;
-            }
-        }
-        cout << "derEch aller: " << derEch << endl;
-
-        ptrG = derEch + 1;
-        for (int i = ptrG; i <= ptrD; i++){
-            if (tab[i] < tab[i-1]){
-                swap(tab, i, i-1);
-                derEch = i;
-            }
-        }
-        ptrD = derEch -1;
-
-        cout << "derEch retour: " << derEch << endl;
-    }
-}
-```
-
-A la fin d'un parcours, les "pointeurs" `ptrDebut` et `ptrFin` contiennent les niveaux entre lesquels le prochain parcours sera effectué. Ces pointeurs sont maj en tenant compte du niveau du dernier échange `derEch` effectué lors d'un parcours.
-Ce tri prend fin quand les deux variables `ptrDebut` et `ptrFin` sont égales.
-
-#
-
-CONCLUSION SUR LES AMÉLIORATION:
-
-Toutes les améliorations n'ont pas modifié le nombre d'échanges à faire (_logique_) et réduisent uniquement le nombre de comparaisons redondantes. Un échange (permutation) est généralement une opération **plus couteuse** qu'une comparaison de de clé. Ce qui fait que si on ne concidère que le pire des cas pour évaluer la complexité des différentes améliorations on se retrouve toujours avec du **O(n^2)**.
-
-#
+[](http://google.com/) <a href="https://ssl.horus.ch/~schaefer/pub/HEArc/ReseauxINF1/protocole-fenetre.html/">ssl.horus.ch</a>
 
