--- a/_posts/2016-05-20-test.md
+++ b/_posts/2016-05-20-test.md
@@ -1,11 +1,8 @@
 ---
 layout: post
-title:  "Algorithmes: Tri"
-date:   2017-05-20
-categories: Res
+title: "Hank Quinlan, Horrible Cop, Launches Site"
+date: 2014-04-30
 ---
-
-
 
 # Algorithmes:
 
