--- a/_posts/2017-05-20-Algo-tri.markdown
+++ b/_posts/2017-05-20-Algo-tri.markdown
@@ -12,8 +12,14 @@ categories: Res
 
 ## 1 Tri-Bulle
 
+<!--![test](/00illustrations/triBulle-flag.gif)-->
 
-[<a href="https://visualgo.net/en/sorting"><img src="00illustrations/triBulle-flag.gif" align="" height="600" float="right"></a>](http://google.com.au/)
+<img src="/00illustrations/triBulle-flag.gif" alt="poule" style="width: 200px;"/>
+
+
+
+
+<!--[<a href="https://visualgo.net/en/sorting"><img src="/00illustrations/triBulle-flag.gif" align="" height="600" float="right"></a>](http://google.com.au/)-->
 
 #
 
@@ -26,7 +32,7 @@ categories: Res
 
 
 
-[<a href=""><img src="00illustrations/Echanger.png" align="" height="150" float="right"></a>]()
+[<a href=""><img src="/00illustrations/Echanger.png" align="" height="150" float="right"></a>]()
 
 
 ```c++
