--- a/_posts/2017-05-20-Algo-tri.markdown
+++ b/_posts/2017-05-20-Algo-tri.markdown
@@ -5,17 +5,14 @@ date:   2017-05-20
 categories: Res
 ---
 
-
-
 # Algorithmes:
 
 
 ## 1 Tri-Bulle
 
 
-[<a href="https://visualgo.net/en/sorting"><img src="/00illustrations/triBulle-flag.gif" align="" height="600" float="right"></a>](http://google.com.au/)
+[<a href="https://visualgo.net/en/sorting"><img src="../00illustrations/triBulle-flag.gif" align="" height="600" float="right"></a>](http://google.com.au/)
 
-#
 
 ## Simple
 
@@ -26,7 +23,7 @@ categories: Res
 
 
 
-[<a href=""><img src="/00illustrations/Echanger.png" align="" height="150" float="right"></a>]()
+[<a href=""><img src="../00illustrations/Echanger.png" align="" height="150" float="right"></a>]()
 
 
 ```c++
@@ -46,7 +43,7 @@ void echange(int *t, int idx)
 
 - Au second parcours, le second élément le plus petit se retrouvera trié à droite de l'élément le plus petit et ainsi de suite jusqu'au tri complet du tableau.
 
-[<a href=""><img src="/00illustrations/Tri_Bulle.png" align="" height="250" float="right"></a>]()
+[<a href=""><img src="../00illustrations/Tri_Bulle.png" align="" height="250" float="right"></a>]()
 
 ```c++
 
@@ -75,11 +72,6 @@ que est également égale au nombre de cases du tableau `-1`.
 
 
 
-$$5 + 2$$
-
-
-#
-
 ### Itératif
 
 Nous pouvons dire qu'après i parcours du tableau, les i plus petits éléments seront triés. Il n'est donc plus nécéssaire que les parcours itèrent sur ces cases ce qui suggère une première amélioration:
@@ -102,13 +94,12 @@ void triBulle(int tab[], int debut, int fin){
 
 Plusieurs éléments peuvent remonter lors d'un même parcours. Avant que l'élément le plus petit restant ne remonte jusqu'à sa place définitive, tous les éléments qui ont à leur gauche (j-1) un élément plus petit remontent au moins d'une case.
 
-#
 
 ### Flag
 
 Le tableau est donc suceptible d'être trié avant les (N-1) parcours. Il serait donc profitable de cesser les parcours dés que le tableau est trié surtout dans le cas d'un tableau qui est totalement trié dés le début. C'est ce que nous permet la prochaine amélioration qui stop la fonction si un parcours entier a été fait sans aucun échange:
 
-[<a href=""><img src="/00illustrations/triBulle_Flag.png" align="" height="400" float="right"></a>](/00illustrations/triBulle_Flag.png)
+[<a href=""><img src="../00illustrations/triBulle_Flag.png" align="" height="400" float="right"></a>](/00illustrations/triBulle_Flag.png)
 
 
 ```c++
@@ -145,7 +136,6 @@ dés le début.
 
 **O(N^2)**
 
-#
 
 ### Étude de la stabilité
 Si deux éléments d'indice `i` et `j` avec `i < j`.
@@ -197,8 +187,6 @@ amélioration de l'algorithme. Pour compenser
 l'asymétrie décrite, le sens de deux parcours
 consécutifs du tableau est alterné.
 
-#
-
 
 ## 2 Tri-Shaker
 
@@ -206,7 +194,7 @@ Pour compenser
 l'asymétrie décrite, le sens de deux parcours
 consécutifs du tableau est alterné.
 
-[<a href=""><img src="/00illustrations/triShaker.png" align="" height="600" float="right"></a>]()
+[<a href=""><img src="../00illustrations/triShaker.png" align="" height="600" float="right"></a>]()
 
 
 
@@ -259,11 +247,9 @@ void triShaker(int tab[], int g, int d){
 A la fin d'un parcours, les "pointeurs" `ptrDebut` et `ptrFin` contiennent les niveaux entre lesquels le prochain parcours sera effectué. Ces pointeurs sont maj en tenant compte du niveau du dernier échange `derEch` effectué lors d'un parcours.
 Ce tri prend fin quand les deux variables `ptrDebut` et `ptrFin` sont égales.
 
-#
 
 CONCLUSION SUR LES AMÉLIORATION:
 
 Toutes les améliorations n'ont pas modifié le nombre d'échanges à faire (_logique_) et réduisent uniquement le nombre de comparaisons redondantes. Un échange (permutation) est généralement une opération **plus couteuse** qu'une comparaison de de clé. Ce qui fait que si on ne concidère que le pire des cas pour évaluer la complexité des différentes améliorations on se retrouve toujours avec du **O(n^2)**.
 
-#
 
