--- a/_posts/2017-05-20-reseau-cp3.markdown
+++ b/_posts/2017-05-20-reseau-cp3.markdown
@@ -1,3 +1,9 @@
+---
+layout: post
+title:  "Reseau: CP3"
+date:   2017-05-21
+categories: Res
+---
 # Contrôle principal III
 
 ## Matrière
@@ -26,7 +32,6 @@
 - DNS (fonctionnement général, protocoles couche 4, type d'enregistrements principaux, concept de délégation)
 - E-mail (architecture, protocoles SMTP, POP, IMAP, format d'un e-mail, format MIME, sécurité, SPAM)
 
-#
 
 ### Résumé: rôles de la couche 4
 
