--- a/_posts/2017-05-20-reseau-cp3.markdown
+++ b/_posts/2017-05-20-reseau-cp3.markdown
@@ -342,6 +342,13 @@ modes** de communication :
 Les sockets sont généralement implémentés en langage **C**, et utilisent des 
 fonctions et des structures disponibles dans la librairie `<sys/socket.h>`. 
 
+### Conecpt de socket ou prise réseau
+L'abstraction programmatique est basée sur le concept de sockets. Un socket est **une prise** qui permet à une application d'envoyer et de recevoir des données.
+
+* une connextion TCP est identidiée par **4 valeurs** (adresss IP source et destination, ports TCP source et destination).
+
+* un socket est identifié par une valeur spécifique à l'OS
+
 
 
 
