--- a/_posts/2017-05-20-Algo-tri.markdown
+++ b/_posts/2017-05-20-Algo-tri.markdown
@@ -1,9 +1,5 @@
----
-layout: post
-title:  "Algorithmes: Tri"
-date:   2017-05-20
-categories: Algo
----
+
+
 
 # Algorithmes:
 
@@ -11,8 +7,9 @@ categories: Algo
 ## 1 Tri-Bulle
 
 
-[<a href="https://visualgo.net/en/sorting"><img src="/00illustrations/triBulle-flag.gif" align="" height="600" float="right"></a>]()
+[<a href="https://visualgo.net/en/sorting"><img src="/00illustrations/triBulle-flag.gif" align="" height="600" float="right"></a>](http://google.com.au/)
 
+#
 
 ## Simple
 
@@ -72,6 +69,11 @@ que est également égale au nombre de cases du tableau `-1`.
 
 
 
+$$5 + 2$$
+
+
+#
+
 ### Itératif
 
 Nous pouvons dire qu'après i parcours du tableau, les i plus petits éléments seront triés. Il n'est donc plus nécéssaire que les parcours itèrent sur ces cases ce qui suggère une première amélioration:
@@ -94,12 +96,13 @@ void triBulle(int tab[], int debut, int fin){
 
 Plusieurs éléments peuvent remonter lors d'un même parcours. Avant que l'élément le plus petit restant ne remonte jusqu'à sa place définitive, tous les éléments qui ont à leur gauche (j-1) un élément plus petit remontent au moins d'une case.
 
+#
 
 ### Flag
 
 Le tableau est donc suceptible d'être trié avant les (N-1) parcours. Il serait donc profitable de cesser les parcours dés que le tableau est trié surtout dans le cas d'un tableau qui est totalement trié dés le début. C'est ce que nous permet la prochaine amélioration qui stop la fonction si un parcours entier a été fait sans aucun échange:
 
-[<a href=""><img src="/00illustrations/triBulle_Flag.png" align="" height="400" float="right"></a>]()
+[<a href=""><img src="/00illustrations/triBulle_Flag.png" align="" height="400" float="right"></a>](00illustrations/triBulle_Flag.png)
 
 
 ```c++
@@ -136,6 +139,7 @@ dés le début.
 
 **O(N^2)**
 
+#
 
 ### Étude de la stabilité
 Si deux éléments d'indice `i` et `j` avec `i < j`.
@@ -165,19 +169,19 @@ Debut                               Fin
 ```
 
 
-.est trié en deux parcours en utilisant la fonction
+...est trié en deux parcours en utilisant la fonction
 triBulle itératif + flag. Un parcours pour faire
 monter (vers le début) le clé 6 dans sa case
 définitive et un autre parcours pour constater que
 le tableau est trié.
-Le tableau suivant quant à lui.
+Le tableau suivant quant à lui...
 
 ```c++
  [94] [6] [12] [18] [42] [44] [55] [67]
 Debut                              Fin
 ```
 
-. nécessite sept parcours pour obtenir un tri
+... nécessite sept parcours pour obtenir un tri
 complet: Les sept valeurs de clé plus petites
 montent à leur place à raison d'une case par
 parcours.
@@ -186,6 +190,8 @@ Cette asymétrie suggère une troisième
 amélioration de l'algorithme. Pour compenser
 l'asymétrie décrite, le sens de deux parcours
 consécutifs du tableau est alterné.
+
+#
 
 
 ## 2 Tri-Shaker
@@ -247,9 +253,113 @@ void triShaker(int tab[], int g, int d){
 A la fin d'un parcours, les "pointeurs" `ptrDebut` et `ptrFin` contiennent les niveaux entre lesquels le prochain parcours sera effectué. Ces pointeurs sont maj en tenant compte du niveau du dernier échange `derEch` effectué lors d'un parcours.
 Ce tri prend fin quand les deux variables `ptrDebut` et `ptrFin` sont égales.
 
-
-CONCLUSION SUR LES AMÉLIORATION:
+### Conclusion sur les améliorations
 
 Toutes les améliorations n'ont pas modifié le nombre d'échanges à faire (_logique_) et réduisent uniquement le nombre de comparaisons redondantes. Un échange (permutation) est généralement une opération **plus couteuse** qu'une comparaison de de clé. Ce qui fait que si on ne concidère que le pire des cas pour évaluer la complexité des différentes améliorations on se retrouve toujours avec du **O(n^2)**.
 
+## 3. Tri par extraction (Selection Sort)
 
+[<a href="https://visualgo.net/en/sorting"><img src="/00illustrations/triExtract.gif" align="" height="600" float="right"></a>]()
+
+A chaque tour, l'algorithme trouve la valeur la plus petite et la place à sa position définitive.
+
+#### initial
+```c++
+ G                                 D
+[46] [12] [53] [15] [33] [1] [10] [8]
+```
+#### tour 1
+```c++
+ G                                 D
+[1] [12] [53] [15] [33] [46] [10] [8]
+// valeur la plus petite: 1 change de 
+// place avec t[G]
+```
+
+```c++
+     G                             D
+[1] [12] [53] [15] [33] [46] [10] [8]
+// la premiere case est maintenant definitive
+// G se deplace d'une case a droite.
+```
+
+#### tour 2
+```c++
+     G                             D
+[1] [8] [53] [15] [33] [46] [10] [12]
+// valeur la plus petite: 8 change 
+// de place avec t[G]
+```
+
+```c++
+          G                        D
+[1] [8] [53] [15] [33] [46] [10] [12]
+// les deux premieres cases sont maintenant 
+// definitives, G se deplace d'une case vers
+// la droite.
+```
+
+> Il ne sert à rien d'itérer sur tout le tableau à chaque tour,
+> les valeurs de gauche, une fois placées le sont définitivement.
+> Gauche est incrémenté de 1 à chaque nouveau tour.
+
+On peut donc diviser ce problème en 3 parties distinctes:
+1. une fonction échange()
+2. une fonction placerMinimumAGauche()
+3. triExtraction()
+
+[<a href="https://visualgo.net/en/sorting"><img src="/00illustrations/Echanger.png" align="" height="150" float="right"></a>]()
+
+```c++
+void echanger(int *t, int a, int b)
+{
+    int temp = t[a];
+    t[a] = t[b];
+    t[b] = temp;
+}
+```
+
+[<a href="https://visualgo.net/en/sorting"><img src="/00illustrations/placerMinimumAGauche.png" align="" height="250" float="right"></a>]()
+
+```c++
+void placerMinGauche(int *t, int g, int d)
+{
+    int idxMin  = g;
+    for (int i = g+1; i <= d; ++i)
+    {
+        if (t[i] < t[idxMin])
+        {
+            idxMin = i;
+        }
+    }
+    echanger(t, g, idxMin);
+}
+```
+
+[<a href="https://visualgo.net/en/sorting"><img src="/00illustrations/triExtraction.png" align="" height="150" float="right"></a>]()
+
+```c++
+void triExtract(int *t, int g, int d)
+{
+    for (int i = g; i < d; ++i)
+    {
+        placerMinGauche(t, g+i, d);
+    }
+}
+```
+> Lorsque les N-1 éléments ayant les clés les plus petites sont à leur place, le dernier élément qui a la plus grande clé l'est aussi.
+
+### Complexité:
+L'algorithme `placerMinimumAGauche()` est exécuté `n-1` fois pour un tableau de `n` éléments et ceci indépendamment de l'ordre initial des clés. A chaque exécution, cet algorithme effectue Droite - Gauche [- (nombre de parcours déja effectués ?)] comparaisons.  
+
+**C** = `n-1 + n-2 + ... + 3 + 2 + 1` = `(n(n-1))/2`  
+
+Le tri par extraction est aussi lent que le tri bulle dans le cas d'un tableau à clés aléatoirement dispersées. Des différences en plus ou en moins peuvent apparaître dans des cas particuliers. Le tri par extraction est innefficace sur un tableau déjà ordonné puisqu'il n'est ps capable de s'en appercevoir.
+
+### Stabilité
+
+```c++
+[15] [15] [37] [21] [13] [18] [45]  // Clé
+[ A] [ B] [ C] [ D] [ E] [ F] [ G]  // Information
+  1    2    3    4    5    6    7   // Indice
+```
