--- a/_posts/2017-05-20-reseau-cp3.markdown
+++ b/_posts/2017-05-20-reseau-cp3.markdown
@@ -5,13 +5,13 @@ subtitle: "théorie CP3"
 date: 2017-05-20
 author: Sol
 category: Reseau
-tags: reseau couche4 couche7 tcp udp
+tags: reseau couche4 couche7 tcp udp fr
 finished: false
 ---
 
 # Contrôle principal III
 
-## 1. Matrière
+## 1. Matière
 
 ### couche 4 (transport)
 - rôles
@@ -100,7 +100,7 @@ finished: false
     * adresse IP distante
     * noméro de port distant
 
-*plusieurs connexions ou échanges d'un client sur la même application d'un même serveur sont différenciès par les numéros de port locaux (côté client)
+* plusieurs connexions ou échanges d'un client sur la même application d'un même serveur sont différenciès par les numéros de port locaux (côté client)
 
 ## 3. UDP (User Datagram Protocol)
 Le protocole UDP (User Datagram Protocol) est un protocole **non orienté connexion** de la couche transport du modèle TCP/IP. Ce protocole est très simple étant donné qu'il ne fournit pas de contrôle d'erreurs (il n'est pas orienté connexion...). 
