--- a/_posts/2017-05-20-Algo-tri.markdown
+++ b/_posts/2017-05-20-Algo-tri.markdown
@@ -5,7 +5,7 @@ subtitle: "Algorithmes de tri"
 date: 2017-05-20
 author: Sol
 category: Algo
-tags: algo Tri
+tags: algo tri fr
 finished: false
 ---
 
