--- a/_posts/2017-05-20-reseau-cp3.markdown
+++ b/_posts/2017-05-20-reseau-cp3.markdown
@@ -109,7 +109,7 @@ Le protocole UDP (User Datagram Protocol) est un protocole **non orienté connex
     * les données peuvent être perdues
     * les mêmes données peuvent arriver plusieurs fois
     * l'ordre des données peut être modifié
-    * le distinataire peut être surchargé par les données de l'émetteur
+    * le déstinataire peut être surchargé par les données de l'émetteur
     * les données ne peuvent dépasser le MTU
 
 ### format des messages
@@ -139,7 +139,7 @@ DNS (Domain name system, aussi en TCP)
 >* TCP offre un transport sûr (fiable) des données
 >    * les données sont transmises exactement une fois (pas de perte, pas de >duplication)
 >    * pas de modification de l'ordre
->    * constrôle de flux
+>    * contrôle de flux
 
 TCP (qui signifie Transmission Control Protocol, soit en français: Protocole de Contrôle de Transmission) est un des principaux protocoles de la couche transport du modèle TCP/IP. Il permet, au niveau des applications, de gérer les données en provenance (ou à destination) de la couche inférieure du modèle (c'est-à-dire le protocole IP). Lorsque les données sont fournies au protocole IP, celui-ci les encapsule dans des datagrammes IP, en fixant le champ protocole à 6 (Pour savoir que le protocole en amont est TCP...). TCP est un protocole orienté connexion, c'est-à-dire qu'il permet à deux machines qui communiquent de contrôler l'état de la transmission. Les caractéristiques principales du protocole TCP sont les suivantes :
 
