--- a/_posts/2017-05-20-Algo-tri.markdown
+++ b/_posts/2017-05-20-Algo-tri.markdown
@@ -69,7 +69,11 @@ de parcours du tableau a sa variable d'itération qui est égale au nombre de ca
 La boucle intérieur qui est responsable du nombre de comparaisons par parcours a sa variable d'itération
 que est également égale au nombre de cases du tableau `-1`.
 
+$$ (n-1) \cdot (n-1)^2 = (N-1)^2 $$
+
 (N-1)*(N-1) = (N-1)^2 comparaisons La complexité de cet version de l'algorithme est de: **O(N^2)**
+
+$$ O(n^2) $$
 
 
 ### Itératif
@@ -407,4 +411,51 @@ void triInsert(int *t, int g, int d)
 }
 ```
 
+
+## 4. Radix Sort (Insert Sort)
+
+### Complexité
+
+O(n)
+
+### Stabilité
+
+Oui, Ils rentrent dans les filles dans un certain ordre et en ressort du même tableau dans le même ordre.
+
+
+
+
+
+
+
+
+
+## RECURSIVITE
+
+### definition
+
+Un terme est récursif si il apparait dans sa définition
+
+###
+
+Fonction où dans sa définition, on va retrouver un appel à la fonction elle même.
+Récursivité et itérativité = deux façons de répéter des actions.
+
+```c
+void f(int, p)
+{
+    //...
+    //...
+    f(val)
+}
+```
+
+
+
+### TODO
+
+ex 3 
+tri select
+
+tri insert  (optionnel)
 
