--- a/_posts/2017-05-20-Algo-tri.markdown
+++ b/_posts/2017-05-20-Algo-tri.markdown
@@ -484,7 +484,7 @@ Considérons deux éléments du tableau, ayant la même clef, et d'indices _i_ e
     <a  href="https://visualgo.net/en/sorting"><img src="/00illustrations/algo-tri/radix.gif"></a>
 </div>
 
-Le tableau d'éléments à ordonner dans l'ordre croissant contient $$n$$ éléments et ses indices vont de $$Gauche$$ à $$Droite$$ ($$0$$ à $$1 n-1$$ en langage C). Cette méthode de tri consiste à trier les clés selon la valeur des unités, puis selon celle des dizaines, puis centaines, … jusqu’au chiffre significatif le plus à gauche.
+Le tableau d'éléments à ordonner dans l'ordre croissant contient $$n$$ éléments et ses indices vont de $$Gauche$$ à $$Droite$$ ($$0$$ à $$n-1$$ en  C). Cette méthode de tri consiste à trier les clés selon la valeur des unités, puis selon celle des dizaines, puis centaines, … jusqu’au chiffre significatif le plus à gauche.
 
 Après autant de passes que le nombre de chiffres de la plus grande des clé (ici 3), le tableau est trié. Cette méthode peut s’appliquer à des clés non numériques (ex : chaines de caractères), pourvu qu’on ait une relation d’ordre entre les symboles utilisés (ex : ordre alphabétique pour une chaîne de caractères). 
 
