algo sort radix

--- a/_posts/2017-05-20-Algo-tri.markdown
+++ b/_posts/2017-05-20-Algo-tri.markdown
@@ -9,6 +9,10 @@ tags: algo tri fr
 finished: false
 ---
 
+## Liens:
+
+[git des algorithmes(privé)](https://github.com/RoscaS/algo_sort)
+
 ## 1 Tri-Bulle (Bubble-sort)
 
 <div class="image">
