--- a/_posts/2017-06-06-Py-NumPy.markdown
+++ b/_posts/2017-06-06-Py-NumPy.markdown
@@ -9,5 +9,9 @@ tags: Py numpy matplotlib
 finished: false
 ---
 
-<script src="https://gist.github.com/RoscaS/75a79d348128bf191dbbf9ebabc58c16.js"></script>
+<script src="https://gist.github.com/RoscaS/ed44a51eb27f3172e419d69563fa2ade.js"></script>
+
+## Exercices
+
+<script src="https://gist.github.com/RoscaS/affa5118cdbd00aa881f2a98fc46eacc.js"></script>
 
