--- a/_posts/2017-05-20-Algo-tri.markdown
+++ b/_posts/2017-05-20-Algo-tri.markdown
@@ -81,7 +81,7 @@ $$ \bbox[20px,border:2px solid red]
 }
 $$
 
-<iframe src="https://www.desmos.com/calculator/8ppukux7qz?embed" width="300px" height="300px" style="border: 0px solid #ccc" frameborder="0"></iframe>
+<img src="/00illustrations/algo-tri/OnC.png"  height="300">
 
 ### Itératif
 
@@ -154,7 +154,7 @@ $$ \bbox[20px,border:2px solid red]
 }
 $$
 
-<iframe src="https://www.desmos.com/calculator/8ppukux7qz?embed" width="300px" height="300px" style="border: 0px solid #ccc" frameborder="0"></iframe>
+<img src="/00illustrations/algo-tri/OnC.png"  height="300">
 
 
 ### Étude de la stabilité
@@ -475,7 +475,7 @@ $$ \bbox[20px,border:2px solid red]
 }
 $$
 
-<iframe src="https://www.desmos.com/calculator/8ppukux7qz?embed" width="300px" height="300px" style="border: 0px solid #ccc" frameborder="0"></iframe>
+<img src="/00illustrations/algo-tri/OnC.png"  height="300">
 
 ### Stabilité
 
@@ -672,9 +672,24 @@ $$ \bbox[20px,border:2px solid red]
 $$
 
 
-<iframe src="https://www.desmos.com/calculator/ttma1w0trt?embed" width="300px" height="300px" style="border: 0px solid #ccc" frameborder="0"></iframe>
+<img src="/00illustrations/algo-tri/On.png"  height="300">
 
 
 ### Stabilité
 
 Cette méthode de tri est stable, les valeurs rentrent dans les filles dans un certain ordre et en ressortent dans le même ordre.
+
+
+
+## Comparaison des algorithmes de tri simples
+
+| Algorithme | Complexité au pire | Stabilité | Famille* | Remarques
+| --- | --- | --- | --- | --- |
+| Bulles et améliorations | $$ O(n^2) $$  | oui | Echange | Sait détecter un tableau trié | 
+| Extraction | $$ O(n^2) $$ | non | Sélection | Inefficace sur un tableau déja trié (le pire) | 
+| Insertion | $$ O(n^2) $$ | oui | Insertion | Intéressant pour insérer des vleurs dans un tableau déjà trié*  | 
+| Base | $$ O(n) $$ | oui | Distribution | Intéressant pour les petites valeurs ("petit" nombre de chiffres) | 
+
+<br>
+
+> * on peut trier les valeurs au fur et à mesure. Pour les autres, il est nécéssaire de les avoir toutes avant de commencer. En $ O(n) $ dans le meilleur cas.
