--- a/_posts/2017-05-20-Algo-tri.markdown
+++ b/_posts/2017-05-20-Algo-tri.markdown
@@ -682,7 +682,7 @@ Cette méthode de tri est stable, les valeurs rentrent dans les filles dans un c
 
 
 
-## Comparaison des algorithmes de tri simples
+## 5. Comparaison des algorithmes de tri simples
 
 | Algorithme | Complexité au pire | Stabilité | Famille* | Remarques
 | --- | --- | --- | --- | --- |
