--- a/_posts/2017-06-06-Py-NumPy.markdown
+++ b/_posts/2017-06-06-Py-NumPy.markdown
@@ -8,10 +8,12 @@ category: Py
 tags: Py numpy matplotlib
 finished: false
 ---
+## cheatSheet
+<script src="https://gist.github.com/RoscaS/05a8c7cf0eeb1b2b4865e641721cdae4.js"></script>
 
+## résumé
 <script src="https://gist.github.com/RoscaS/ed44a51eb27f3172e419d69563fa2ade.js"></script>
 
 ## Exercices
-
 <script src="https://gist.github.com/RoscaS/affa5118cdbd00aa881f2a98fc46eacc.js"></script>
 
