--- a/_posts/2017-05-20-Algo-tri.markdown
+++ b/_posts/2017-05-20-Algo-tri.markdown
@@ -11,7 +11,7 @@ finished: false
 
 ## Liens:
 
-[repo(privé)](https://github.com/RoscaS/algo_sort)
+[repo](https://github.com/RoscaS/algo_sort)
 [VisuAlgo](https://visualgo.net/en)
 
 ## 1 Tri-Bulle (Bubble-sort)
