--- a/_posts/2017-06-14-Py-Regex.markdown
+++ b/_posts/2017-06-14-Py-Regex.markdown
@@ -12,6 +12,11 @@ finished: false
 ## Todo
 * Exemples en Python (Jupyter)
 
+## Liens
+[tuto regex](https://regexone.com/)  
+[analyse d'expressions (premier choix)](http://regexr.com/)
+[analyse d'expressions 2](https://regex101.com/tests)
+
 ## Basic
 
 ### Core
