--- a/_posts/2017-05-20-reseau-cp3.markdown
+++ b/_posts/2017-05-20-reseau-cp3.markdown
@@ -76,8 +76,8 @@ finished: false
 * un numéro de port identifie une application d'une machine
 * l'application appelante doit connaître le numéro de port de l'application appelée: _well known ports:_
 
-| port | protocole 
-| :-----------: | :-
+| port | protocole |
+| :-----------: |:--:|
 | 7 | Echo
 | 21 | FTP
 | 23 | Telnet
