--- a/_posts/2017-05-20-Algo-tri.markdown
+++ b/_posts/2017-05-20-Algo-tri.markdown
@@ -9,7 +9,7 @@ tags: algo tri fr
 finished: false
 ---
 
-## Liens:
+## Liens
 
 [repo](https://github.com/RoscaS/algo_sort)
 [VisuAlgo](https://visualgo.net/en)
